--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,9 +30,10 @@
         android:drawableEnd="@drawable/outline_add_card_24"
         android:drawablePadding="@dimen/space_.5"
         android:focusable="true"
+        android:paddingVertical="@dimen/space_1"
+        android:text="Add Cards"
         android:textColor="@color/grayscale_dark_100"
         android:textSize="16sp"
-        android:text="Add Cards"
         app:drawableTint="@color/grayscale_dark_100"
         app:layout_constraintBaseline_toBaselineOf="@id/tv_my_credit_card_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,12 +42,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_my_cards"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipChildren="false"
-        android:overScrollMode="never"
-        tools:listitem="@layout/item_my_credit_card_view"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/space_1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_my_credit_card_title" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_my_credit_card_title"
+        tools:listitem="@layout/item_my_credit_card_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
