--- a/app/src/main/res/layout/view_expense_last_month.xml
+++ b/app/src/main/res/layout/view_expense_last_month.xml
@@ -67,6 +67,7 @@
                     android:id="@+id/text_input_edit_Text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLength="7"
                     android:inputType="number"
                     android:textSize="12sp" />
 
