--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,11 +6,22 @@
     android:layout_height="match_parent">
 
     <include
-        android:id="@+id/view_my_expense"
-        layout="@layout/view_expense_last_month"
+        android:id="@+id/view_finding_best_of_card"
+        layout="@layout/view_finding_best_of_card"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        android:id="@+id/view_my_expense"
+        layout="@layout/view_expense_last_month"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_finding_best_of_card" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_my_credit_card_title"
@@ -18,8 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/space_2"
         android:text="บัตรของฉัน"
-        android:textColor="@color/grayscale_dark_300"
-        android:textSize="18sp"
+        android:textColor="@color/blue_dark_300"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tv_add_credit_card"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +40,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_add_credit_card"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_gravity="bottom"
         android:layout_margin="@dimen/space_2"
         android:background="?selectableItemBackgroundBorderless"
@@ -38,23 +49,30 @@
         android:drawablePadding="@dimen/space_.5"
         android:focusable="true"
         android:paddingVertical="@dimen/space_1"
-        android:text="เพิ่มบัตรเครดิต"
         android:textColor="@color/grayscale_dark_100"
         android:textSize="16sp"
         app:drawableTint="@color/grayscale_dark_100"
         app:layout_constraintBaseline_toBaselineOf="@id/tv_my_credit_card_title"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <View
+        android:id="@+id/view_divider"
+        android:layout_width="0dp"
+        android:layout_height="4dp"
+        android:layout_marginHorizontal="@dimen/space_1"
+        android:background="@color/grayscale_light_300"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="Add Credit Cards" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_credit_card" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_my_cards"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/space_1"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_my_credit_card_title"
+        app:layout_constraintTop_toBottomOf="@+id/view_divider"
         tools:listitem="@layout/item_my_credit_card_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
