--- a/app/src/main/res/layout/item_my_credit_card_view.xml
+++ b/app/src/main/res/layout/item_my_credit_card_view.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/space_1"
     app:cardCornerRadius="@dimen/radius_1"
-    app:cardElevation="3dp"
-    app:strokeColor="@color/blue_light_100"
-    app:strokeWidth="@dimen/space_.5">
+    app:cardElevation="@dimen/space_.5">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -66,7 +65,6 @@
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginTop="@dimen/space_.5"
-
             android:background="@color/grayscale_light_300"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
