--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <include
         android:id="@+id/view_finding_best_of_card"
@@ -19,6 +20,7 @@
         layout="@layout/view_expense_last_month"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_finding_best_of_card" />
@@ -30,7 +32,7 @@
         android:layout_margin="@dimen/space_2"
         android:text="บัตรของฉัน"
         android:textColor="@color/blue_dark_300"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tv_add_credit_card"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +60,7 @@
     <View
         android:id="@+id/view_divider"
         android:layout_width="0dp"
-        android:layout_height="4dp"
+        android:layout_height="2dp"
         android:layout_marginHorizontal="@dimen/space_1"
         android:background="@color/grayscale_light_300"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +71,8 @@
         android:id="@+id/rv_my_cards"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/space_1"
+        android:clipToPadding="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_divider"
