--- a/app/src/main/res/layout/view_finding_best_of_card.xml
+++ b/app/src/main/res/layout/view_finding_best_of_card.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="@dimen/space_1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="@dimen/space_2"
+    android:paddingTop="@dimen/space_2">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_my_expense_title"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="ค้นหาบัตรที่เหมาะสำหรับการใช้จ่าย"
         android:textColor="@color/blue_dark_300"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
     <View
         android:id="@+id/view_divider"
         android:layout_width="0dp"
-        android:layout_height="4dp"
+        android:layout_height="2dp"
         android:layout_marginTop="@dimen/space_.5"
         android:background="@color/grayscale_light_300"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +60,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_1"
         android:hint="เลือกหมวดหมู่ในการใช้จ่าย"
+        app:boxCornerRadiusBottomEnd="@dimen/space_1"
+        app:boxCornerRadiusBottomStart="@dimen/space_1"
+        app:boxCornerRadiusTopEnd="@dimen/space_1"
+        app:boxCornerRadiusTopStart="@dimen/space_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_find_card">
@@ -70,7 +74,6 @@
             android:layout_height="wrap_content"
             android:inputType="none"
             android:textColor="@color/black"
-            android:textStyle="bold"
             android:textSize="16sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,12 +82,13 @@
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:id="@+id/btn_find"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:enabled="false"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_1"
+        android:enabled="false"
         android:text="ค้นหา"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/category_menu" />
