--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -6,8 +6,8 @@
         android:title="Home" />
     <item
         android:id="@+id/promotionFragment"
-        android:icon="@drawable/outline_dehaze_24"
-        android:title="Promotion " />
+        android:icon="@drawable/ic_my_promotion"
+        android:title="My Promotion " />
     <item
         android:id="@+id/manageCreditCardFragment"
         android:icon="@drawable/outline_credit_card_24"
