Create CreditCardBenefit and MyPromotion ViewHolder

--- a/app/src/main/res/layout/item_title_view_all_view.xml
+++ b/app/src/main/res/layout/item_title_view_all_view.xml
@@ -21,7 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_1"
         android:textSize="18sp"
+        android:textStyle="bold"
         android:textColor="@color/grayscale_dark_300"
+        app:lineHeight="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_view_all"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +40,7 @@
         android:drawablePadding="@dimen/space_.5"
         android:focusable="true"
         android:textSize="16sp"
+        android:visibility="gone"
         tools:text="เพิ่่มบัตรเครดิต"
         android:textColor="@color/grayscale_dark_100"
         app:drawableTint="@color/grayscale_dark_100"
