--- a/app/src/main/res/layout/item_my_promotion_empty_view.xml
+++ b/app/src/main/res/layout/item_my_promotion_empty_view.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/layout_horizontal_view"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:nestedScrollingEnabled="false"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ไม่พบโปรโมชั่นที่บันทึกไว้"
+        android:textColor="@color/grayscale_dark_100"
+        android:textSize="14sp"
+        android:layout_margin="@dimen/space_5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
